objects/Workstep_Library__c/Workstep_Library__c.object-meta.xml
<CustomObject>
    <label>Workstep Library</label>
    <nameField>
        <label>Workstep Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstep Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>