objects/Workstep_Library__c/fields/Anti_Workstep__c.field-meta.xml
<CustomField>
    <fullName>Anti_Workstep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti-Workstep</label>
    <type>Checkbox</type>
</CustomField>