objects/Workstep_Library__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept Order</fullName>
            </value>
            <value>
                <fullName>Access Design</fullName>
            </value>
            <value>
                <fullName>Activate with Customer</fullName>
            </value>
            <value>
                <fullName>BLA</fullName>
            </value>
            <value>
                <fullName>Build Site Survey</fullName>
            </value>
            <value>
                <fullName>CCD Driven</fullName>
            </value>
            <value>
                <fullName>CLICK Activation Date Driven</fullName>
            </value>
            <value>
                <fullName>CLICK ITS Install Date Driven</fullName>
            </value>
            <value>
                <fullName>CLICK SIP Activation Date Driven</fullName>
            </value>
            <value>
                <fullName>Customer Data Gather</fullName>
            </value>
            <value>
                <fullName>Customer Kick Off</fullName>
            </value>
            <value>
                <fullName>Design Facility</fullName>
            </value>
            <value>
                <fullName>Enter Order</fullName>
            </value>
            <value>
                <fullName>Estimated BLA</fullName>
            </value>
            <value>
                <fullName>Estimated Construction</fullName>
            </value>
            <value>
                <fullName>Estimated Permit</fullName>
            </value>
            <value>
                <fullName>Exclude From Expedite</fullName>
            </value>
            <value>
                <fullName>Exclude From PDD Calculation</fullName>
            </value>
            <value>
                <fullName>Fiber SMP</fullName>
            </value>
            <value>
                <fullName>Finalize Order</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>FOC Driven</fullName>
            </value>
            <value>
                <fullName>Hardware Install and Test</fullName>
            </value>
            <value>
                <fullName>ITS Program Meeting Date</fullName>
            </value>
            <value>
                <fullName>NIE SMP</fullName>
            </value>
            <value>
                <fullName>Order Facility</fullName>
            </value>
            <value>
                <fullName>Order LPN</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Power SMP</fullName>
            </value>
            <value>
                <fullName>Project Network Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>