objects/Workstep_Library__c/fields/CTP_Attribute__c.field-meta.xml
<CustomField>
    <fullName>CTP_Attribute__c</fullName>
    <label>CTP Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>