objects/Workstep_Library__c/fields/Default_to_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_to_Order_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default to Order Owner</label>
    <type>Checkbox</type>
</CustomField>