objects/Workstep_Library__c/fields/Non_Access_Duration__c.field-meta.xml
<CustomField>
    <fullName>Non_Access_Duration__c</fullName>
    <label>Non-Access Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>