objects/Workstep_Library__c/fields/Start_Date_Driving_Fields__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Driving_Fields__c</fullName>
    <label>Start Date Driving Fields</label>
    <type>TextArea</type>
</CustomField>