objects/Workstep_Library__c/fields/Work_Group__c.field-meta.xml
<CustomField>
    <fullName>Work_Group__c</fullName>
    <label>Work Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>Carrier Support</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>