objects/Workstep_Library__c/listViews/Accounting_Asset_Management_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>Accounting_Asset_Management_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounting - Asset Management</label>
    <queue>Accounting_Asset_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>