objects/Workstep_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Anti_Workstep__c</columns>
    <columns>Attribute__c</columns>
    <columns>CTP_Attribute__c</columns>
    <columns>CTP_Communication_Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Milestone__c</columns>
    <columns>Non_Access_Duration__c</columns>
    <columns>Non_Access_Lag__c</columns>
    <columns>Non_Access_SLA__c</columns>
    <columns>Work_Group__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>