objects/Workstep_Library__c/listViews/BPM_Project_Management_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>BPM_Project_Management_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>BPM - Project Management</label>
    <queue>BPM_Project_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>