objects/Workstep_Library__c/listViews/CS_Pend_ETF_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>CS_Pend_ETF_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>CS – Pend ETF</label>
    <queue>CS_Pend_ETF</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>