objects/Workstep_Library__c/listViews/Data_Design_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>Data_Design_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>Data-Design</label>
    <queue>Data_Design</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>