objects/Workstep_Library__c/listViews/Field_Services_PM_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>Field_Services_PM_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>Field Services-PM</label>
    <queue>Field_Services_PM</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>