objects/Workstep_Library__c/listViews/ITS_EL_MAC_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>ITS_EL_MAC_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>DNU</label>
    <queue>ITS_EL_MAC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>