objects/Workstep_Library__c/listViews/ITS_Integra_RTW_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>ITS_Integra_RTW_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>DNU</label>
    <queue>ITS_Integra_RTW</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>