objects/Workstep_Library__c/listViews/Legacy_Activation_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>Legacy_Activation_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>Legacy-Activation</label>
    <queue>Legacy_Activation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>