objects/Workstep_Library__c/listViews/MT_SAT_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>MT_SAT_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>MT SAT</label>
    <queue>MT_SAT</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>