objects/Workstep_Library__c/listViews/OF_Toll_Free_SLD_Workstep_Library.listView-meta.xml
<ListView>
    <fullName>OF_Toll_Free_SLD_Workstep_Library</fullName>
    <filterScope>Queue</filterScope>
    <label>OF-Toll Free/SLD</label>
    <queue>OF_Toll_Free_SLD</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>